--- a/sabyltimetracker/templates/account/login.html
+++ b/sabyltimetracker/templates/account/login.html
@@ -47,8 +47,11 @@ body, html {
 	text-align: center;
 	margin-bottom: 0px;
 }
+#login-box .logo {
+	text-align: center;
+}
 #login-box .logo .tweak {
-	color: #ff5252;
+	color: #417690;
 }
 #login-box .controls {
 	padding-top: 30px;
@@ -59,6 +62,9 @@ body, html {
 	border: 0px;
 	color: white;
 	font-family: 'Nunito', sans-serif;
+}
+#login-box .controls label {
+	display: none;
 }
 #login-box .controls input:focus {
 	box-shadow: none;
@@ -72,9 +78,10 @@ body, html {
 	border-bottom-right-radius: 2px;
 }
 #login-box button.btn-custom {
+  width: 100%;
 	border-radius: 2px;
 	margin-top: 8px;
-	background:#ff5252;
+	background:#417690;
 	border-color: rgba(48, 46, 45, 1);
 	color: white;
 	font-family: 'Nunito', sans-serif;
@@ -86,7 +93,7 @@ body, html {
 	-o-transition: all 500ms ease;
 	transition: all 500ms ease;
 	background: rgba(48, 46, 45, 1);
-	border-color: #ff5252;
+	border-color: #417690;
 }
 #particles-zone{
   	width: 100%;
@@ -108,7 +115,7 @@ body, html {
 {#    <div class="container">#}
         <div id="login-box">
             <div class="logo">
-                <img src="" class="img img-responsive img-circle center-block"/>
+                <img src="{% static 'images/logo.png' %}"/>
                 <h1 class="logo-caption"><span class="tweak">L</span>ogin</h1>
             </div><!-- /.logo -->
             <div class="controls">
