Fix login styles and modify base.html
Changed bootstrap4 beta for alpha.
Replaced navbar for black one. 
Reorganized login css in new file.

--- a/sabyltimetracker/static/css/project.css
+++ b/sabyltimetracker/static/css/project.css
@@ -12,6 +12,11 @@
   border-color: #eed3d7;
 }
 
+.navbar-logo {
+  height: 27px;
+  margin-left: -13px;
+}
+
 /* Display django-debug-toolbar.
    See https://github.com/django-debug-toolbar/django-debug-toolbar/issues/742
    and https://github.com/pydanny/cookiecutter-django/issues/317
