Add dashboard styles

--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -57,7 +57,7 @@
           </div>
         </nav>
     {% endblock navbar %}
-
+    <div class="bgImageContainer"></div>
     <div class="container">
 
       {% if messages %}
