TEST: fix wrong git user

--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -10,6 +10,7 @@
 
   <div class="row">
     <div class="col col-md-8">.col .col-md-8</div>
+    <P>TEST</P>
     <div class="col-6 col-md-4">.col-6 .col-md-4</div>
   </div>
 
