--- a/sabyltimetracker/static/css/project.css
+++ b/sabyltimetracker/static/css/project.css
@@ -17,6 +17,10 @@
   margin-left: -13px;
 }
 
+.navbar-space{
+  padding-top: 54px;
+}
+
 /* Display django-debug-toolbar.
    See https://github.com/django-debug-toolbar/django-debug-toolbar/issues/742
    and https://github.com/pydanny/cookiecutter-django/issues/317
