--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -14,7 +14,7 @@
 {#  background-size: cover;#}
 {#  -o-background-size: cover;#}
 .bgImageContainer{
-    background-image:url('http://www.sisinsure.com/wp-content/uploads/2016/04/Blue-print.jpg');
+    background-image:url('https://1.bp.blogspot.com/-mcFl99vJuo4/WO1CqSZYGQI/AAAAAAAAReo/R3txP8Cg2FIo2q0ynzO7JoyRO4X9WGh_wCLcB/s1600/planos%2Bde%2Buna%2Bcasa.png');
       -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
