--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -65,15 +65,40 @@
     var table = $('#example').DataTable();
 
     $('#submit-hours').click( function() {
-        var data = [];
+        var task = $('#task').val();
+        var hours_list = [];
         table.$('input').each(function (i, el) {
-           data.push({'user': $(el).attr('name'), 'amount': $(el).val()});
+           var hours = parseFloat($(el).val());
+           if (hours > 0){
+              hours_list.push({'user': $(el).attr('name'), 'amount': hours});
+           }
          });
-        alert(
-            "The following data would have been submitted to the server: \n\n"+
-            JSON.stringify(data)
-        );
-        return false;
+
+        var data = {'task': task, 'hours_list': hours_list};
+        $.ajaxSetup({
+            headers: { "X-CSRFToken": "{{ csrf_token }}" }
+        });
+        $.ajax({
+          type : "POST",
+          url : "{% url 'tracker:api_add_hours' request.user.username %}",
+          data : JSON.stringify(data),
+          headers: {
+            'Accept': 'application/json',
+            'Content-Type': 'application/json'
+            },
+          success: function(){
+              alert("Saved! It worked.");
+            },
+          error: function(XMLHttpRequest, textStatus, errorThrown) {
+            alert("some error " + String(errorThrown) + String(textStatus) + String(XMLHttpRequest.responseText));
+            }
+        });
+
+        {#alert(#}
+        {#    "The following data would have been submitted to the server: \n\n"+#}
+        {#    JSON.stringify(data)#}
+        {#);#}
+        return true;
     } );
   } );
   </script>
