--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -3,137 +3,7 @@
 
 {% block css %}
   {{ block.super }}
-
-  <style>
-  @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
-{##}
-{#  body {#}
-{#  background: url('http://www.360dis.com/wp-content/uploads/2018/01/house-plans-with-lookout-tower-beautiful-house-plans-with-lookout-tower-webbkyrkan-webbkyrkan-of-house-plans-with-lookout-tower.jpg') no-repeat center center fixed;#}
-{#  -webkit-background-size: cover;#}
-{#  -moz-background-size: cover;#}
-{#  background-size: cover;#}
-{#  -o-background-size: cover;#}
-.bgImageContainer{
-    background-image:url('https://1.bp.blogspot.com/-mcFl99vJuo4/WO1CqSZYGQI/AAAAAAAAReo/R3txP8Cg2FIo2q0ynzO7JoyRO4X9WGh_wCLcB/s1600/planos%2Bde%2Buna%2Bcasa.png');
-      -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-    width:100%;
-    height:100%;
-    -webkit-filter: blur(5px);
-    z-index:0;
-    position:absolute;
-}
-      .big-clock {
-          padding: 7rem 1.5rem;
-          text-align: center;
-      }
-
-    .hero-circle {
-  width: 180px;
-  height: 180px;
-  margin: 0 auto;
-  position: relative;
-  border: 8px solid rgba(0, 0, 0, 0.7);
-  border-radius: 50%;
-/*   background: url(../img/bg.png) 0 50%; */
-}
-
-.hero-face {
-  width: 100%;
-  height: 100%;
-}
-
-.hero-face:after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 12px;
-  height: 12px;
-  margin: -6px 0 0 -6px;
-  background: red;
-  border-radius: 6px;
-  content: "";
-  display: block;
-}
-
-.hero-hour {
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -4px 0 -4px -25%;
-  padding: 4px 0 4px 25%;
-  background: black;
-  opacity: 0.9;
-  -webkit-transform-origin: 100% 50%;
-  -ms-transform-origin: 100% 50%;
-  transform-origin: 100% 50%;
-  border-radius: 4px 0 0 4px;
-}
-
-.hero-minute {
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -40% -3px 0;
-  padding: 40% 3px 0;
-  background: black;
-  opacity: 0.9;
-  -webkit-transform-origin: 50% 100%;
-  -ms-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  border-radius: 3px 3px 0 0;
-}
-
-.hero-second {
-  width: 0;
-  height: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -40% -1px 0 0;
-  padding: 40% 1px 0;
-  background: red;
-  -webkit-transform-origin: 50% 100%;
-  -ms-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-}
-
-.date {
-        letter-spacing: 0.1em;
-        font-size: 18px;
-    }
-.time {
-    letter-spacing: 0.05em;
-    font-size: 30px;
-    padding: 5px 0;
-}
-
-
-.clock-time {
-    height: 100%;
-    width: 100%;
-    line-height: 15px;
-    margin: 20px 0 0 0;
-    padding: 20px 20px 20px 20px;
-    font-family: 'Share Tech Mono';
-    text-align: center;
-    border-radius: 15px;
-    color: #daf6ff;
-    opacity: 0.85;
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
--webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    text-shadow: 0 0 20px rgba(10, 175, 230, 1),  0 0 20px rgba(10, 175, 230, 0);
-    background: #0f3854;
-    background: radial-gradient(ellipse at center,  #0a2e38  0%, #000000 70%);
-}
-  </style>
+  <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 {% endblock css %}
 
 {% block content %}
@@ -168,37 +38,7 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 
 
 {% block javascript %}
-
   {{ block.super }}
   <script src="https://momentjs.com/downloads/moment.js"></script>
-  <script>
-
-  $( document ).ready(function() {
-      function updateClock(){
-          var now = moment(),
-              second = now.seconds() * 6,
-              minute = now.minutes() * 6 + second / 60,
-              hour = ((now.hours() % 12) / 12) * 360 + 90 + minute / 12;
-
-          $('#hour').css("transform", "rotate(" + hour + "deg)");
-          $('#minute').css("transform", "rotate(" + minute + "deg)");
-          $('#second').css("transform", "rotate(" + second + "deg)");
-      }
-
-      function updateTime() {
-        var now = moment();
-        $('.date').html(now.format('D MMMM YYYY '));
-        $('.time').html(now.format('H:mm:ss'));
-      }
-
-      function timedUpdate () {
-          updateClock();
-          updateTime();
-          setTimeout(timedUpdate, 1000);
-      }
-
-      timedUpdate();
-  });
-
-  </script>
+  <script type="text/javascript" src="{% static 'js/dashboard.js' %}"></script>
 {% endblock javascript %}
