--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -3,11 +3,18 @@
 
 {% block css %}
   {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/datatables.css' %}">
   <style>
 
   </style>
 {% endblock css %}
+
+{% block javascript_header %}
+  <script>
+    var csrf = "{{ csrf_token }}";
+    var post_url = "{% url 'tracker:api_add_hours' request.user.username %}";
+  </script>
+{% endblock javascript_header %}
 
 {% block content %}
   <div class="row navbar-space">
@@ -22,7 +29,7 @@
   </div>
   <div class="row">
     <div class="col col-md-12">
-      <table id="example" class="display" cellspacing="0" width="100%">
+      <table id="hours_per_user" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>{% trans "Surname" %}</th>
@@ -58,49 +65,6 @@
 
 {% block javascript %}
   {{ block.super }}
-  <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
-
-  <script>
-  $(document).ready(function() {
-    var table = $('#example').DataTable();
-
-    $('#submit-hours').click( function() {
-        var task = $('#task').val();
-        var hours_list = [];
-        table.$('input').each(function (i, el) {
-           var hours = parseFloat($(el).val());
-           if (hours > 0){
-              hours_list.push({'user': $(el).attr('name'), 'amount': hours});
-           }
-         });
-
-        var data = {'task': task, 'hours_list': hours_list};
-        $.ajaxSetup({
-            headers: { "X-CSRFToken": "{{ csrf_token }}" }
-        });
-        $.ajax({
-          type : "POST",
-          url : "{% url 'tracker:api_add_hours' request.user.username %}",
-          data : JSON.stringify(data),
-          headers: {
-            'Accept': 'application/json',
-            'Content-Type': 'application/json'
-            },
-          success: function(){
-              alert("Saved! It worked.");
-            },
-          error: function(XMLHttpRequest, textStatus, errorThrown) {
-            alert("some error " + String(errorThrown) + String(textStatus) + String(XMLHttpRequest.responseText));
-            }
-        });
-
-        {#alert(#}
-        {#    "The following data would have been submitted to the server: \n\n"+#}
-        {#    JSON.stringify(data)#}
-        {#);#}
-        return true;
-    } );
-  } );
-  </script>
-
+  <script type="text/javascript" charset="utf8" src="{% static 'js/datatables.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/log_hours.js' %}"></script>
 {% endblock javascript %}
