hotfix for scrolling css bug

--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -58,7 +58,7 @@
         </nav>
     {% endblock navbar %}
     <div class="bgImageContainer"></div>
-    <div class="container">
+    <div class="main container">
 
       {% if messages %}
           {% for message in messages %}
