--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static i18n%}
+{% load filters %}
 
 {% block css %}
   {{ block.super }}
@@ -17,12 +18,13 @@
 {% endblock javascript_header %}
 
 {% block content %}
-  <div class="row navbar-space">
+  <div class="row">
     <div class="col col-md-12">
       <label for="task">{% trans "Task" %}</label>
       <select id="task" name="task">
+          <option value=""></option>
         {% for task in tasks %}
-          <option value="{{ task.id }}">{{ task.code }} - {{ task.name }}</option>
+          <option value="{{ task.id }}" data-name="{{ task.name }}">{{ task.code }} - {{ task.name }}</option>
         {% endfor %}
       </select>
     </div>
@@ -34,14 +36,20 @@
             <tr>
                 <th>{% trans "Surname" %}</th>
                 <th>{% trans "Name" %}</th>
-                <th>{% trans "Hours" %}</th>
+                <th>{% trans "Hours Logged" %}</th>
+                <th class="hours-label">
+                  {% trans "Select a task" %}
+                </th>
             </tr>
         </thead>
         <tfoot>
             <tr>
                 <th>{% trans "Surname" %}</th>
                 <th>{% trans "Name" %}</th>
-                <th>{% trans "Hours" %}</th>
+                <th>{% trans "Hours Logged" %}</th>
+                <th class="hours-label">
+                  {% trans "Select a task" %}
+                </th>
             </tr>
         </tfoot>
         <tbody>
@@ -49,7 +57,17 @@
             <tr>
               <td>{{ worker.last_name }}</td>
               <td>{{ worker.first_name }}</td>
-              <td><input type="text" id="{{ worker.id }}-{{ worker.name }}-hours" name="{{ worker.id }}" value="61"></td>
+              <td>
+                {{ worker.logs|sum_hours }}
+              </td>
+              <td>
+                <input type="text" class="hours-input"
+                   id="{{ worker.id }}-{{ worker.name }}-hours"
+                   name="{{ worker.id }}"
+                   value="0"
+                   disabled
+                />
+              </td>
             </tr>
           {% endfor %}
         </tbody>
@@ -57,7 +75,8 @@
     </div>
   </div>
   <div class="row">
-    <button id="submit-hours" type="submit">Submit form</button>
+    <button id="submit-hours" type="submit">{% trans "Log Hours For This Task" %}</button>
+    <button>{% trans "TODO: Log hours and close day" %}</button>
   </div>
 
 {% endblock content%}
