--- a/sabyltimetracker/templates/tracker/log_hours.html
+++ b/sabyltimetracker/templates/tracker/log_hours.html
@@ -33,24 +33,24 @@
     <div class="col col-md-12">
       <table id="hours_per_user" class="display" cellspacing="0" width="100%">
         <thead>
-            <tr>
-                <th>{% trans "Surname" %}</th>
-                <th>{% trans "Name" %}</th>
-                <th>{% trans "Hours Logged" %}</th>
-                <th class="hours-label">
-                  {% trans "Select a task" %}
-                </th>
-            </tr>
+          <tr>
+            <th>{% trans "Surname" %}</th>
+            <th>{% trans "Name" %}</th>
+            <th>{% trans "Hours Logged" %}</th>
+            <th class="hours-label">
+              {% trans "Select a task" %}
+            </th>
+          </tr>
         </thead>
         <tfoot>
-            <tr>
-                <th>{% trans "Surname" %}</th>
-                <th>{% trans "Name" %}</th>
-                <th>{% trans "Hours Logged" %}</th>
-                <th class="hours-label">
-                  {% trans "Select a task" %}
-                </th>
-            </tr>
+          <tr>
+           <th>{% trans "Surname" %}</th>
+            <th>{% trans "Name" %}</th>
+            <th>{% trans "Hours Logged" %}</th>
+            <th class="hours-label">
+              {% trans "Select a task" %}
+            </th>
+          </tr>
         </tfoot>
         <tbody>
           {% for worker in workers %}
@@ -71,12 +71,12 @@
             </tr>
           {% endfor %}
         </tbody>
-    </table>
+      </table>
     </div>
   </div>
   <div class="row">
     <button id="submit-hours" type="submit">{% trans "Log Hours For This Task" %}</button>
-    <button>{% trans "TODO: Log hours and close day" %}</button>
+    <a href="{% url 'tracker:day_review' request.user.username %}" role="button"><button type="button">{% trans "End Day" %}</button></a>
   </div>
 {% endblock content%}
 
