--- a/sabyltimetracker/templates/account/login.html
+++ b/sabyltimetracker/templates/account/login.html
@@ -6,45 +6,25 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block javascript_header %}
-    <script type="text/javascript" src="{% static 'js/particles.min.js' %}"></script>
-{% endblock javascript_header %}
-
-{% block css %}
-    {{ block.super }}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-{% endblock %}
-
-{% block navbar %}
-    {#  This block overrides the super block to remove the navbar  #}
-{% endblock navbar %}
-
 {% block content %}
-{#    <div class="container">#}
-        <div id="login-box">
-            <div class="logo">
-                <img src="{% static 'images/logo.png' %}"/>
-                <h1 class="logo-caption"><span class="tweak">L</span>ogin</h1>
-            </div><!-- /.logo -->
-            <div class="controls">
-                <form class="login" method="POST" action="{% url 'account_login' %}">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    {% if redirect_field_value %}
-                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    {#  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>#}
-                    <button class="primaryAction btn btn-primary btn-custom" type="submit">{% trans "Sign In" %}</button>
-                </form>
-            </div><!-- /.controls -->
-        </div><!-- /#login-box -->
-{#    </div><!-- /.container -->#}
-
-    <div id="particles-zone"></div>
-
+  <div class="sufee-login d-flex align-content-center flex-wrap">
+      <div class="container">
+          <div class="login-content">
+              <div class="login-logo">
+                <img class="align-content" src="{% static 'images/logo.png' %}" alt="">
+              </div>
+              <div class="login-form">
+                  <form class="login" method="POST" action="{% url 'account_login' %}">
+                      {% csrf_token %}
+                      {{ form|crispy }}
+                      {% if redirect_field_value %}
+                          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                      {% endif %}
+                      {#  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>#}
+                    <button class="btn btn-success btn-flat m-b-30 m-t-30" type="submit">{% trans "Sign In" %}</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
 {% endblock content %}
-
-{% block javascript %}
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
-{% endblock javascript %}
