--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -1,4 +1,8 @@
 {% load static i18n compress%}<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -18,9 +22,21 @@
     {% endblock javascript_header %}
 
     {% block css %}
+      <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
+      <link rel="stylesheet" href="{% static 'css/flag-icon.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/cs-skin-elastic.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+{#      <link href="assets/css/lib/vector-map/jqvmap.min.css" rel="stylesheet">#}
+
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
 
     <!-- Latest compiled and minified Bootstrap 4 beta CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">#}
 
 
     <!-- Your stuff: Third-party CSS libraries go here -->
@@ -35,63 +51,267 @@
   </head>
 
   <body>
+    <!-- Left Panel -->
     {% block navbar %}
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navar-resize" aria-controls="navar-resize" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <a class="navbar-brand" href="{% url 'home' %}"><img class="navbar-logo" src="{% static 'images/logo.png' %}"/> TimeTracker</a>
-
-          <div class="collapse navbar-collapse" id="navar-resize">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
-            {% if request.user.is_authenticated %}
-              <a id="log-in-link" href="{% url 'account_logout' %}"><button class="btn btn-outline-info my-2 my-sm-0" type="submit">{% trans "Sign Out" %}</button></a>
-            {% else %}
-              <a id="log-in-link" href="{% url 'account_login' %}"><button class="btn btn-outline-info my-2 my-sm-0" type="submit">{% trans "Sign In" %}</button></a>
-            {% endif %}
+    <aside id="left-panel" class="left-panel">
+        <nav class="navbar navbar-expand-sm navbar-default">
+          <div class="navbar-header">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="{% trans "Toggle navigation" %}">
+                <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="./"><img src="{% static 'images/logo.png' %}" alt="Logo"></a>
+            <a class="navbar-brand hidden" href="./"><img src="{% static 'images/logo.png' %}" alt="Logo"></a>
           </div>
-        </nav>
-    {% endblock navbar %}
-    <div class="bgImageContainer"></div>
-    <div class="main container">
 
-      {% if messages %}
+          <div id="main-menu" class="main-menu collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a href="{% url 'home' %}"> <i class="menu-icon fa fa-dashboard"></i>{% trans 'Dashboard' %}</a>
+                </li>
+{#                <h3 class="menu-title">UI elements</h3><!-- /.menu-title -->#}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Components</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="fa fa-puzzle-piece"></i><a href="ui-buttons.html">Buttons</a></li>#}
+{#                        <li><i class="fa fa-id-badge"></i><a href="ui-badges.html">Badges</a></li>#}
+{#                        <li><i class="fa fa-bars"></i><a href="ui-tabs.html">Tabs</a></li>#}
+{#                        <li><i class="fa fa-share-square-o"></i><a href="ui-social-buttons.html">Social Buttons</a></li>#}
+{#                        <li><i class="fa fa-id-card-o"></i><a href="ui-cards.html">Cards</a></li>#}
+{#                        <li><i class="fa fa-exclamation-triangle"></i><a href="ui-alerts.html">Alerts</a></li>#}
+{#                        <li><i class="fa fa-spinner"></i><a href="ui-progressbar.html">Progress Bars</a></li>#}
+{#                        <li><i class="fa fa-fire"></i><a href="ui-modals.html">Modals</a></li>#}
+{#                        <li><i class="fa fa-book"></i><a href="ui-switches.html">Switches</a></li>#}
+{#                        <li><i class="fa fa-th"></i><a href="ui-grids.html">Grids</a></li>#}
+{#                        <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Typography</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="fa fa-table"></i><a href="tables-basic.html">Basic Table</a></li>#}
+{#                        <li><i class="fa fa-table"></i><a href="tables-data.html">Data Table</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Forms</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="menu-icon fa fa-th"></i><a href="forms-basic.html">Basic Form</a></li>#}
+{#                        <li><i class="menu-icon fa fa-th"></i><a href="forms-advanced.html">Advanced Form</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{##}
+{#                <h3 class="menu-title">Icons</h3><!-- /.menu-title -->#}
+{##}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Icons</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="menu-icon fa fa-fort-awesome"></i><a href="font-fontawesome.html">Font Awesome</a></li>#}
+{#                        <li><i class="menu-icon ti-themify-logo"></i><a href="font-themify.html">Themefy Icons</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#                <li>#}
+{#                    <a href="widgets.html"> <i class="menu-icon ti-email"></i>Widgets </a>#}
+{#                </li>#}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-bar-chart"></i>Charts</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">Chart JS</a></li>#}
+{#                        <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Flot Chart</a></li>#}
+{#                        <li><i class="menu-icon fa fa-pie-chart"></i><a href="charts-peity.html">Peity Chart</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{##}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Maps</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="menu-icon fa fa-map-o"></i><a href="maps-gmap.html">Google Maps</a></li>#}
+{#                        <li><i class="menu-icon fa fa-street-view"></i><a href="maps-vector.html">Vector Maps</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+{#                <h3 class="menu-title">Extras</h3><!-- /.menu-title -->#}
+{#                <li class="menu-item-has-children dropdown">#}
+{#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>#}
+{#                    <ul class="sub-menu children dropdown-menu">#}
+{#                        <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>#}
+{#                        <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>#}
+{#                        <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a></li>#}
+{#                    </ul>#}
+{#                </li>#}
+            </ul>
+          </div><!-- /.navbar-collapse -->
+          </nav>
+        </aside>
+      {% endblock navbar %}
+    <!-- Left Panel -->
+
+  <!-- Right Panel -->
+
+  <div id="right-panel" class="right-panel">
+    <!-- Header-->
+    <header id="header" class="header">
+
+      <div class="header-menu">
+
+        <div class="col-sm-7">
+          <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
+          <div class="header-left">
+{#                      <button class="search-trigger"><i class="fa fa-search"></i></button>#}
+{#                      <div class="form-inline">#}
+{#                          <form class="search-form">#}
+{#                              <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">#}
+{#                              <button class="search-close" type="submit"><i class="fa fa-close"></i></button>#}
+{#                          </form>#}
+{#                      </div>#}
+{##}
+{#                      <div class="dropdown for-notification">#}
+{#                        <button class="btn btn-secondary dropdown-toggle" type="button" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                          <i class="fa fa-bell"></i>#}
+{#                          <span class="count bg-danger">5</span>#}
+{#                        </button>#}
+{#                        <div class="dropdown-menu" aria-labelledby="notification">#}
+{#                          <p class="red">You have 3 Notification</p>#}
+{#                          <a class="dropdown-item media bg-flat-color-1" href="#">#}
+{#                              <i class="fa fa-check"></i>#}
+{#                              <p>Server #1 overloaded.</p>#}
+{#                          </a>#}
+{#                          <a class="dropdown-item media bg-flat-color-4" href="#">#}
+{#                              <i class="fa fa-info"></i>#}
+{#                              <p>Server #2 overloaded.</p>#}
+{#                          </a>#}
+{#                          <a class="dropdown-item media bg-flat-color-5" href="#">#}
+{#                              <i class="fa fa-warning"></i>#}
+{#                              <p>Server #3 overloaded.</p>#}
+{#                          </a>#}
+{#                        </div>#}
+{#                      </div>#}
+{##}
+{#                      <div class="dropdown for-message">#}
+{#                        <button class="btn btn-secondary dropdown-toggle" type="button"#}
+{#                              id="message"#}
+{#                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                          <i class="ti-email"></i>#}
+{#                          <span class="count bg-primary">9</span>#}
+{#                        </button>#}
+{#                        <div class="dropdown-menu" aria-labelledby="message">#}
+{#                          <p class="red">You have 4 Mails</p>#}
+{#                          <a class="dropdown-item media bg-flat-color-1" href="#">#}
+{#                              <span class="photo media-left"><img alt="avatar" src="images/avatar/1.jpg"></span>#}
+{#                              <span class="message media-body">#}
+{#                                  <span class="name float-left">Jonathan Smith</span>#}
+{#                                  <span class="time float-right">Just now</span>#}
+{#                                      <p>Hello, this is an example msg</p>#}
+{#                              </span>#}
+{#                          </a>#}
+{#                          <a class="dropdown-item media bg-flat-color-4" href="#">#}
+{#                              <span class="photo media-left"><img alt="avatar" src="images/avatar/2.jpg"></span>#}
+{#                              <span class="message media-body">#}
+{#                                  <span class="name float-left">Jack Sanders</span>#}
+{#                                  <span class="time float-right">5 minutes ago</span>#}
+{#                                      <p>Lorem ipsum dolor sit amet, consectetur</p>#}
+{#                              </span>#}
+{#                          </a>#}
+{#                          <a class="dropdown-item media bg-flat-color-5" href="#">#}
+{#                              <span class="photo media-left"><img alt="avatar" src="images/avatar/3.jpg"></span>#}
+{#                              <span class="message media-body">#}
+{#                                  <span class="name float-left">Cheryl Wheeler</span>#}
+{#                                  <span class="time float-right">10 minutes ago</span>#}
+{#                                      <p>Hello, this is an example msg</p>#}
+{#                              </span>#}
+{#                          </a>#}
+{#                          <a class="dropdown-item media bg-flat-color-3" href="#">#}
+{#                              <span class="photo media-left"><img alt="avatar" src="images/avatar/4.jpg"></span>#}
+{#                              <span class="message media-body">#}
+{#                                  <span class="name float-left">Rachel Santos</span>#}
+{#                                  <span class="time float-right">15 minutes ago</span>#}
+{#                                      <p>Lorem ipsum dolor sit amet, consectetur</p>#}
+{#                              </span>#}
+{#                          </a>#}
+{#                        </div>#}
+{#                      </div>#}
+          </div>
+        </div>
+
+        <div class="col-sm-5">
+          <div class="user-area dropdown float-right">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img class="user-avatar rounded-circle" src="{% static 'images/admin.jpg' %}" alt="User Avatar">
+            </a>
+
+            <div class="user-menu dropdown-menu">
+              {% if request.user.is_authenticated %}
+                <a id="log-in-link" class="nav-link" href="{% url 'account_logout' %}"><i class="fa fa-power -off"></i>{% trans "Sign Out" %}</a>
+              {% else %}
+                <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
+              {% endif %}
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </header><!-- /header -->
+  <!-- Header-->
+
+    {% block breadcrumbs %}
+
+    {% endblock breadcrumbs %}
+
+    {% if messages %}
+        <div class="col-sm-12">
           {% for message in messages %}
-              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %} alert-dismissible fade show" role="alert">
+                <span class="badge badge-pill {% if message.tags %}badge-{{ message.tags }}{% endif %}">{% trans 'Message' %}</span>
+                  {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
           {% endfor %}
-      {% endif %}
+        </div>
+    {% endif %}
 
-      {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
-      {% endblock content %}
+    <div class="content mt-3">
+      {% block content %}{% endblock content %}
+    </div>
 
-    </div> <!-- /container -->
 
-    {% block modal %}{% endblock modal %}
+  </div>
+
+  {% block modal %}{% endblock modal %}
+
+
+
+
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    {% block javascript %}
 
+    {% block javascript %}
       <!-- Required by Bootstrap v4 beta -->
       <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
       <!-- Your stuff: Third-party javascript libraries go here -->
 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+      <script src="{%  static 'js/plugins.js'  %}"></script>
+      <script src="{%  static 'js/main_theme.js'  %}"></script>
+
+
+{#      <script src="assets/js/lib/chart-js/Chart.bundle.js"></script>#}
+{#      <script src="assets/js/dashboard.js"></script>#}
+{#      <script src="assets/js/widgets.js"></script>#}
+{#      <script src="assets/js/lib/vector-map/jquery.vmap.js"></script>#}
+{#      <script src="assets/js/lib/vector-map/jquery.vmap.min.js"></script>#}
+{#      <script src="assets/js/lib/vector-map/jquery.vmap.sampledata.js"></script>#}
+{#      <script src="assets/js/lib/vector-map/country/jquery.vmap.world.js"></script>#}
 
       <!-- place project specific Javascript in this file -->
       {% compress js %}
-      <script src="{% static 'js/project.js' %}"></script>
       {% endcompress %}
 
     {% endblock javascript %}
+
   </body>
 </html>
 
