--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -7,52 +7,119 @@
   <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 {% endblock css %}
 
-{% block content %}
-<div class="container">
-
-  <div class="big-clock">
-    <div class="hero-circle">
-			<div class="hero-face">
-				<div id="hour" class="hero-hour"></div>
-				<div id="minute" class="hero-minute"></div>
-				<div id="second" class="hero-second"></div>
-			</div>
-		</div>
-    <div id="clock" class="clock-time col-md-12">
-      <p class="date">loading ...</p>
-      <p class="time"></p>
-    </div>
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+  <div class="col-sm-4">
+      <div class="page-header float-left">
+          <div class="page-title">
+              <h1>{% trans 'Dashboard' %}</h1>
+          </div>
+      </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-6">
-      {% if workday %}
-        <a href="{% url 'tracker:day_review' request.user.username %}" role="button"><button type="button" class="btn btn-lg btn-outline-info">{% trans "End Day" %}</button></a>
-      {% else %}
-        <a href="#" role="button"><button type="button" class="btn btn-lg btn-outline-info">{% trans "Start Day" %}</button></a>
-      {%  endif %}
-    </div>
-    <div class="col-md-6">
-      <a href="{% url 'tracker:log_hours' request.user.username %}" role="button"><button type="button" class="btn btn-lg btn-outline-warning">{% trans "Log Hours" %}</button></a>
-    </div>
+  <div class="col-sm-8">
+      <div class="page-header float-right">
+          <div class="page-title">
+              <ol class="breadcrumb text-right">
+                  <li class="active">{% trans 'Dashboard' %}</li>
+              </ol>
+          </div>
+      </div>
   </div>
-
-  <div class="row">
-    {%  if workers_missing_hours %}
-      {% if workers_missing_hours|length == 1 %}
-        <p>{% trans "1 worker is missing hours." %}</p>
-        <p>{{ workers_missing_hours|first }} {% trans " needs more hours logged." %}</p>
-      {% else %}
-        <p>{{ workers_missing_hours|length }} {% trans "workers are missing hours." %}</p>
-        <p>{{ workers_missing_hours|ellipsize:3 }} {% trans " need more hours logged." %}</p>
-      {% endif %}
-    {% else %}
-      <p>{% trans "All workers have enough logged hours. When you are sure everything is done, you can end the day." %}</p>
-    {% endif %}
-  </div>
-
-
 </div>
+{%  endblock breadcrumbs %}
+
+{% block content %}
+
+   <div class="col-xl-3 col-lg-6">
+      <div class="card">
+        <div class="card-body">
+          <div class="big-clock">
+            <div class="hero-circle">
+              <div class="hero-face">
+                <div id="hour" class="hero-hour"></div>
+                <div id="minute" class="hero-minute"></div>
+                <div id="second" class="hero-second"></div>
+              </div>
+            </div>
+            <div id="clock" class="clock-time col-md-12">
+              <p class="date">loading ...</p>
+              <p class="time"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <div class="col-xl-3 col-lg-6">
+      <div class="card">
+          <div class="card-body">
+              <div class="stat-widget-one">
+                  <div class="stat-icon dib"><i class="ti-direction text-warning border-warning"></i></div>
+                  <div class="stat-content dib">
+                      <div class="stat-text">Building Address</div>
+                      <div class="stat-digit">{{ building.address }}</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="col-xl-3 col-lg-6">
+      <div class="card">
+          <div class="card-body">
+              <div class="stat-widget-one">
+                  <div class="stat-icon dib"><i class="ti-clipboard text-success border-success"></i></div>
+                  <div class="stat-content dib">
+                      <div class="stat-text">Workers with logged hours</div>
+                      <div class="stat-digit">{{ workers_ratio }}%</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+  <div class="col-xl-3 col-lg-6">
+      <div class="card">
+          <div class="card-body">
+              <div class="stat-widget-one">
+                  <div class="stat-icon dib"><i class="ti-time text-primary border-primary"></i></div>
+                  <div class="stat-content dib">
+                    {%  if workers_missing_hours %}
+                      {% if workers_missing_hours|length == 1 %}
+                        <div class="stat-text">
+                            {{ workers_missing_hours|first }} {% trans " needs more hours logged." %}
+                        </div>
+                        <div class="stat-digit">{% trans "1 worker missing hours." %}</div>
+                      {% else %}
+                        <div class="stat-text">
+                          {{ workers_missing_hours|ellipsize:3 }} {% trans " need more hours logged." %}
+                        </div>
+                        <div class="stat-digit">{{ workers_missing_hours|length }} {% trans "workers missing hours." %}</div>
+                      {% endif %}
+                    {% else %}
+                      <div class="stat-text">
+                        {% trans "All workers have enough logged hours. When you are sure everything is done, you can end the day." %}
+                      </div>
+                    {% endif %}
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <div class="col-xs-12">
+      <div class="card">
+          <div class="card-body">
+            {% if workday %}
+              <a href="{% url 'tracker:day_review' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "End Day" %}</a>
+            {% else %}
+              <a href="#" role="button">< type="button"  class="btn btn-outline-primary">{% trans "Start Day" %}</a>
+            {%  endif %}
+            <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "Log Hours" %}</a>
+          </div>
+      </div>
+  </div>
 {% endblock content%}
 
 
