--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -4,119 +4,177 @@
 
 {% block css %}
   {{ block.super }}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/datatables.css' %}">
+  <link rel="stylesheet" href="{% static '/css/datatable/dataTables.bootstrap.min.css' %}">
 {% endblock css %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+  <div class="col-sm-4">
+      <div class="page-header float-left">
+          <div class="page-title">
+              <h1>{% trans 'Day Review' %}</h1>
+          </div>
+      </div>
+  </div>
+  <div class="col-sm-8">
+      <div class="page-header float-right">
+          <div class="page-title">
+              <ol class="breadcrumb text-right">
+                  <li class="active"><a href="{% url 'home' %}">{% trans 'Dashboard' %}</a></li>
+                  <li class="active">{% trans 'Day Review' %}</li>
+              </ol>
+          </div>
+      </div>
+  </div>
+</div>
+{%  endblock breadcrumbs %}
+
+{% block content %}
+<div class="row">
+  <div class="col-xs-6 col-lg-12">
+    <div class="card">
+      <div class="card-header">
+        <strong>1</strong>
+        <small>{% trans 'Overview for' %} {{ workday }}</small>
+      </div>
+      <div class="card-body card-block">
+        <div class="stat-widget-one">
+          <div class="stat-content dib">
+            {%  if workers_missing_hours %}
+              {% if workers_missing_hours|length == 1 %}
+                <div class="stat-text">
+                    {{ workers_missing_hours|first }} {% trans " needs more hours logged." %}
+                </div>
+                <div class="stat-digit">{% trans "1 worker missing hours." %}</div>
+              {% else %}
+                <div class="stat-text">
+                  {{ workers_missing_hours|ellipsize:3 }} {% trans " need more hours logged." %}
+                </div>
+                <div class="stat-digit">{{ workers_missing_hours|length }} {% trans "workers missing hours." %}</div>
+              {% endif %}
+            {% else %}
+              <div class="stat-text">
+                {% trans "All workers have enough logged hours. When you are sure everything is done, you can end the day." %}
+              </div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-6 col-lg-12">
+    <div class="card">
+      <div class="card-header">
+        <strong>2</strong>
+        <small>{% trans 'Review hours' %}</small>
+      </div>
+      <div class="card-body">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+                <a class="nav-link active" id="workers-tab" data-toggle="tab" href="#workers" role="tab" aria-controls="workers" aria-selected="true">{% trans 'Hours by Worker' %}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="tasks-tab" data-toggle="tab" href="#tasks" role="tab" aria-controls="tabs" aria-selected="false">{% trans 'Hours by Task' %}</a>
+            </li>
+        </ul>
+        <div class="tab-content pl-3 p-1" id="myTabContent">
+            <div class="tab-pane show active" id="workers" role="tabpanel" aria-labelledby="home-tab">
+              <h4>{% trans 'Hours by Worker' %}</h4>
+              <table id="hours_per_worker" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>{% trans "Surname" %}</th>
+                    <th>{% trans "Name" %}</th>
+                    <th>{% trans "Hours Logged" %}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for worker in workers %}
+                    <tr>
+                      <td>{{ worker.last_name }}</td>
+                      <td>{{ worker.first_name }}</td>
+                      <td>
+                        <ul>
+                          {% for log in worker.logs %}
+                            <li>
+                              {{ log.task.name }} - {{ log.amount }} {% trans "hours" %}
+                            </li>
+                          {% endfor %}
+                        </ul>
+                      </td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
+            <div class="tab-pane" id="tasks" role="tabpanel" aria-labelledby="profile-tab">
+              <h4>{% trans 'Hours by Task' %}</h4>
+              <table id="hours_per_task" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>{% trans "Task" %}</th>
+                    <th>{% trans "Hours Logged" %}</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for task in tasks %}
+                    <tr>
+                      <td>{{ task.name }}</td>
+                      <td>
+                        <ul>
+                          {% for log in task.logs %}
+                            <li>
+                              {{ log.user.last_name }}, {{ log.user.first_name }} - {{ log.amount }} {% trans "hours" %}
+                            </li>
+                          {% endfor %}
+                        </ul>
+                      </td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-6 col-lg-12">
+    <div class="card">
+      <div class="card-header">
+        <strong>3</strong>
+        <small>{% trans 'Confirmation' %}</small>
+      </div>
+      <div class="card-body card-block">
+        <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
+          <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "Edit Hours" %}</a>
+          <button type="submit" class="btn btn-success">{% trans "Confirm and End Day" %}</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock content%}
 
 {% block javascript %}
   {{ block.super }}
-  <script type="text/javascript" charset="utf8" src="{% static 'js/datatables.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/day_review.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/day_review.js' %}"></script>
+
+  <script src="{% static 'js/data-table/datatables.min.js' %}"></script>
+  <script src="{% static 'js/data-table/dataTables.bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/data-table/dataTables.buttons.min.js' %}"></script>
+  <script src="{% static 'js/data-table/buttons.bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/data-table/jszip.min.js' %}"></script>
+  <script src="{% static 'js/data-table/pdfmake.min.js' %}"></script>
+  <script src="{% static 'js/data-table/vfs_fonts.js' %}"></script>
+  <script src="{% static 'js/data-table/buttons.html5.min.js' %}"></script>
+  <script src="{% static 'js/data-table/buttons.print.min.js' %}"></script>
+  <script src="{% static 'js/data-table/buttons.colVis.min.js' %}"></script>
+  <script src="{% static 'js/data-table/datatables-init.js' %}"></script>
 {% endblock javascript %}
-
-{% block content %}
-<div class="container">
-
-  <h1>Day review</h1>
-
-  <div class="row">
-    {{ workday }}
-  </div>
-
-  <div class="row">
-    {%  if workers_missing_hours %}
-      {% if workers_missing_hours|length == 1 %}
-        <p>{% trans "1 worker is missing hours." %}</p>
-        <p>{{ workers_missing_hours|first }} {% trans " needs more hours logged." %}</p>
-      {% else %}
-        <p>{{ workers_missing_hours|length }} {% trans "workers are missing hours." %}</p>
-        <p>{{ workers_missing_hours|ellipsize:3 }} {% trans " need more hours logged." %}</p>
-      {% endif %}
-    {% else %}
-      <p>{% trans "All workers have enough logged hours. When you are sure everything is done, you can end the day." %}</p>
-    {% endif %}
-  </div>
-
-  <div class="row">
-    <div class="col col-md-12">
-      <h2>Hours by worker</h2>
-      <table id="hours_per_worker" class="display" cellspacing="0" width="100%">
-        <thead>
-          <tr>
-            <th>{% trans "Surname" %}</th>
-            <th>{% trans "Name" %}</th>
-            <th>{% trans "Hours Logged" %}</th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-           <th>{% trans "Surname" %}</th>
-            <th>{% trans "Name" %}</th>
-            <th>{% trans "Hours Logged" %}</th>
-          </tr>
-        </tfoot>
-        <tbody>
-          {% for worker in workers %}
-            <tr>
-              <td>{{ worker.last_name }}</td>
-              <td>{{ worker.first_name }}</td>
-              <td>
-                <ul>
-                  {% for log in worker.logs %}
-                    <li>
-                      {{ log.task.name }} - {{ log.amount }} {% trans "hours" %}
-                    </li>
-                  {% endfor %}
-                </ul>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col col-md-12">
-      <h2>Hours by task</h2>
-      <table id="hours_per_task" class="display" cellspacing="0" width="100%">
-        <thead>
-          <tr>
-            <th>{% trans "Task" %}</th>
-            <th>{% trans "Hours Logged" %}</th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-           <th>{% trans "Task" %}</th>
-            <th>{% trans "Hours Logged" %}</th>
-          </tr>
-        </tfoot>
-        <tbody>
-          {% for task in tasks %}
-            <tr>
-              <td>{{ task.name }}</td>
-              <td>
-                <ul>
-                  {% for log in task.logs %}
-                    <li>
-                      {{ log.user.last_name }}, {{ log.user.first_name }} - {{ log.amount }} {% trans "hours" %}
-                    </li>
-                  {% endfor %}
-                </ul>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="row">
-    <a href="{% url 'tracker:log_hours' request.user.username %}" role="button"><button type="button">{% trans "Edit Hours" %}</button></a>
-    <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
-      <button type="submit">{% trans "Confirm and End Day" %}</button>
-    </form>
-  </div>
-
-</div>
-{% endblock content%}
