--- a/sabyltimetracker/templates/base.html
+++ b/sabyltimetracker/templates/base.html
@@ -68,7 +68,9 @@
                 <li class="active">
                     <a href="{% url 'home' %}"> <i class="menu-icon fa fa-dashboard"></i>{% trans 'Dashboard' %}</a>
                 </li>
-{#                <h3 class="menu-title">UI elements</h3><!-- /.menu-title -->#}
+                <h3 class="menu-title">{% trans 'Menu' %}</h3><!-- /.menu-title -->
+                <li><a href="{% url 'tracker:past_days' request.user.username %}"><i class="menu-icon fa fa-calendar"></i>{% trans 'Edit Past Days' %}</a></li>
+{##}
 {#                <li class="menu-item-has-children dropdown">#}
 {#                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>Components</a>#}
 {#                    <ul class="sub-menu children dropdown-menu">#}
