--- a/sabyltimetracker/templates/tracker/dashboard.html
+++ b/sabyltimetracker/templates/tracker/dashboard.html
@@ -30,41 +30,7 @@
 
 {% block content %}
 
-   <div class="col-xl-3 col-lg-6">
-      <div class="card">
-        <div class="card-body">
-          <div class="big-clock">
-            <div class="hero-circle">
-              <div class="hero-face">
-                <div id="hour" class="hero-hour"></div>
-                <div id="minute" class="hero-minute"></div>
-                <div id="second" class="hero-second"></div>
-              </div>
-            </div>
-            <div id="clock" class="clock-time col-md-12">
-              <p class="date">loading ...</p>
-              <p class="time"></p>
-            </div>
-          </div>
-        </div>
-      </div>
-  </div>
-
-  <div class="col-xl-3 col-lg-6">
-      <div class="card">
-          <div class="card-body">
-              <div class="stat-widget-one">
-                  <div class="stat-icon dib"><i class="ti-direction text-warning border-warning"></i></div>
-                  <div class="stat-content dib">
-                      <div class="stat-text">Building Address</div>
-                      <div class="stat-digit">{{ building.address }}</div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
-  <div class="col-xl-3 col-lg-6">
+    <div class="col-12 col-lg-6">
       <div class="card">
           <div class="card-body">
               <div class="stat-widget-one">
@@ -78,8 +44,7 @@
       </div>
   </div>
 
-
-  <div class="col-xl-3 col-lg-6">
+  <div class="col-12 col-lg-6">
       <div class="card">
           <div class="card-body">
               <div class="stat-widget-one">
@@ -108,15 +73,40 @@
       </div>
   </div>
 
-  <div class="col-xs-12">
+   <div class="col-12">
+      <div class="card">
+        <div class="card-body">
+          <div class="big-clock">
+            <div class="hero-circle">
+              <div class="hero-face">
+                <div id="hour" class="hero-hour"></div>
+                <div id="minute" class="hero-minute"></div>
+                <div id="second" class="hero-second"></div>
+              </div>
+            </div>
+            <div id="clock" class="clock-time col-md-12">
+              <p class="date">loading ...</p>
+              <p class="time"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <div class="col-12">
       <div class="card">
           <div class="card-body">
-            {% if workday %}
-              <a href="{% url 'tracker:day_review' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "End Day" %}</a>
-            {% else %}
-              <a href="#" role="button">< type="button"  class="btn btn-outline-primary">{% trans "Start Day" %}</a>
-            {%  endif %}
-            <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "Log Hours" %}</a>
+            <div class="col-sm-6 col-12">
+              <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-lg btn-block btn-outline-primary">{% trans "Log Hours" %}</a>
+            </div>
+
+            <div class="col-sm-6 col-12">
+              {% if workday %}
+                <a href="{% url 'tracker:day_review' request.user.username %}" role="button" class="btn btn-lg btn-block btn-outline-danger">{% trans "End Day" %}</a>
+              {% else %}
+                <a href="#" role="button">< type="button"  class="btn btn-outline-primary">{% trans "Start Day" %}</a>
+              {%  endif %}
+            </div>
           </div>
       </div>
   </div>
