--- a/sabyltimetracker/templates/tracker/day_review.html
+++ b/sabyltimetracker/templates/tracker/day_review.html
@@ -34,8 +34,7 @@
   <div class="col-xs-6 col-lg-12">
     <div class="card">
       <div class="card-header">
-        <strong>1</strong>
-        <small>{% trans 'Overview for' %} {{ workday }}</small>
+        <strong>{% trans 'Overview for' %} {{ workday }}</strong>
       </div>
       <div class="card-body card-block">
         <div class="stat-widget-one">
@@ -68,8 +67,7 @@
   <div class="col-xs-6 col-lg-12">
     <div class="card">
       <div class="card-header">
-        <strong>2</strong>
-        <small>{% trans 'Review hours' %}</small>
+        <strong>{% trans 'Hours Review' %}</strong>
       </div>
       <div class="card-body">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -146,14 +144,14 @@
 <div class="row">
   <div class="col-xs-6 col-lg-12">
     <div class="card">
-      <div class="card-header">
-        <strong>3</strong>
-        <small>{% trans 'Confirmation' %}</small>
-      </div>
       <div class="card-body card-block">
         <form method="post" action="{% url 'tracker:api_end_day' request.user.username %}">{% csrf_token %}
-          <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-outline-primary">{% trans "Edit Hours" %}</a>
-          <button type="submit" class="btn btn-success">{% trans "Confirm and End Day" %}</button>
+          <div class="col-sm-6 col-12">
+            <a href="{% url 'tracker:log_hours' request.user.username %}" role="button" class="btn btn-lg btn-block btn-outline-primary">{% trans "Edit Hours" %}</a>
+          </div>
+          <div class="col-sm-6 col-12">
+            <button type="submit" class="btn btn-lg btn-block btn-outline-success">{% trans "Confirm and End Day" %}</button>
+          </div>
         </form>
       </div>
     </div>
